[metadata]
name = pmapper
author = Brandon Dube
author-email = brandon.dube@jpl.nasa.gov
description = Image restoration and superresolution algorithms
long-description = file: README.md
license = MIT
platform = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
zip_safe = true
include_package_data = true
packages = pmapper
python_requires = >= 3.6
tests_require = pytest
test_suite = tests
setup_requires =
    setuptools >= 38.3.0
    setuptools_scm
install_requires =
    numpy
    scipy

[options.packages.find]
exclude = tests/, docs

[bdist_wheel]
universal = true

[sdist]
formats = gztar

[flake8]
max-line-length = 120
exclude = .git, .eggs, __pycache__, tests/, docs/, build/, dist/
